# mcp-erpnext

./: .env.example  .gitignore  API.md  CLAUDE_INTEGRATION.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  config.html  example.py  pyproject.toml  requirements.txt  setup.py
.claude/: README.md  launch.json
src/: __init__.py  cli.py  config.py  erpnext_client.py  server.py
tests/: __init__.py  test_config.py
